# registration-harvester

./: .dockerignore  .gitignore  .ruff.toml  Dockerfile  README.md  config-landsat.yaml  config-sentinel.yaml  config-static-catalog.yaml  config-tutorial.yaml  config.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: build-publish-image.yml
etc/: config.yaml  eoepca-ca-chain.pem
etc/collections/: landsat-ot-c2-l2.json
etc/collections/landsat/: landsat-ot-c2-l2.json
etc/collections/sentinel/: sentinel-2-c1-l2a.json
etc/notebooks/: feasibility.ipynb
etc/notebooks/helper/: maps.py
src/worker/: main.py
src/worker/common/: client.py  config.py  iam.py  iam_client.py  log_utils.py  manager.py  search_interval.py  secrets.py  subscription_manager.py  task_handler.py  types.py
src/worker/common/base/: file.py
src/worker/common/datasets/: landsat.py  sentinel.py
src/worker/common/providers/: cdse.py  usgs.py
src/worker/common/resources/: stac.py
src/worker/landsat/: discovery.py  tasks.py
src/worker/sentinel/: main.py  tasks.py
src/worker/stac/: tasks.py
src/worker/tutorial/: tasks.py
tests/: demo-landsat-workflow.ipynb  test-auth.ipynb  test-landsat-workflow.ipynb  test-sentinel-workflow.ipynb  test_collection.json  test_create_collection.py  test_landsat_eodag.py  test_sentinel_eodag.py  test_sentinel_tasks.py  test_stac_common.py
tests/data/example-catalog/landsat-8-l1/: collection.json
worker/: main.py  pyproject.toml
worker/worker/: config.py  log_utils.py  manager.py
worker/worker/tasks/: sentinel.py
workflows/: harvester-tutorial-workflow.bpmn  harvester-tutorial.bpmn  landsat-registration-hourly.bpmn  landsat-scene-ingestion.bpmn  landsat.bpmn  sentinel-registration-hourly.bpmn  sentinel-scene-ingestion.bpmn  sentinel.bpmn  stac-publish.bpmn  stac.bpmn
