[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "worker"
version = "1.3.0"
authors = [
    { name="Mario Winkler", email="mario.winkler@dlr.de" },
    { name="Jonas Eberle", email="jonas.eberle@dlr.de" },
    { name="Markus Kunze", email="markus.kunze@dlr.de" }
]
description = "A Flowable External Worker implementation with FastAPI acting as worker for Registration Harvester component"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "click == 8.2.1",
    "requests == 2.32.5",
    "fastapi[standard] == 0.115.14",
    "stactools-landsat == 0.5.0",
    "setuptools == 80.9.0",
    "blake3 == 1.0.8",
    "fsspec == 2024.12.0",
    "s3fs == 2024.12.0",
    "registration-library @ git+https://github.com/EOEPCA/registration-library",
    "flowable.external-worker-client @ git+https://github.com/EOEPCA/eoepca-flowable-external-client-python@1.2.0",
    "eodm @ git+https://github.com/geopython/eodm@0.2.0",
    "httpx == 0.27.2",
    "pystac == 1.14.1",
    "pystac-client == 0.7.7"
]

[project.optional-dependencies]
dev = [
    "black == 25.12.0",
    "flake8 == 7.3.0"
]
test = [
    "pytest == 9.0.2"
]

[project.urls]
Homepage = "https://github.com/EOEPCA/registration-harvester"
Issues = "https://github.com/EOEPCA/registration-harvester/issues"

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-q --import-mode=importlib --no-header -rfE --disable-warnings --log-level=INFO"
testpaths = [
    "tests"
]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s.%(msecs)03d %(levelname)s %(message)s"
log_cli_date_format = "%Y-%m-%dT%H:%M:%S"

[tool.black]
line-length = 120
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py310"